<resources>
    <string name="app_name">Skiftly</string>
    <string name="action_settings">Settings</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="forgot">Forgot your password? Reset here.</string>


    <!-- Strings related to login -->

    <string name="error_field_required">This field is required</string>
    <string name="error_Email_Invalid">"Email is invalid"</string>
    <string name="error_Email_Not_Exist">"Email not exist"</string>
    <string name="error_Password_to_short">Password number is to short, Enter minimum 6 digits</string>
    <string name="error_Password_to_long">"Password number is to long, Enter minimum 6 digits"</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="ok">OK</string>
    <string name="error_Password">"Incorrect Password"</string>
    <string name="place_name">Place Name</string>
    <string name="address">Address</string>
    <string name="secret_word">Secret Word</string>
    <string name="fetch_location">Fetch Location</string>
    <string name="save">Save</string>
    <string name="mobile_number">Mobile number</string>
    <string name="name_surname">Name_Surname</string>
    <string name="product_name">Product name</string>
    <string name="ean">EAN</string>
    <string name="MAP_API_KEY">AIzaSyAubPsiDO71W1Jxq8VmRTEwNeqUeww47b0</string>
    <string name="authorizationCode">Enter the authorization code.</string>
    <string name="errorMessage">Service not available</string>
    <string name="cleaningTime">Cleaning time</string>
    <string name="requiredCleaningUntil">Required cleaning until</string>
    <string name="cleaning_time">Cleaning time:</string>
    <string name="required_cleaning_until">Required cleaning until:</string>
    <string name="recently_cleaned">Recently cleaned:</string>
    <string name="cant_clean">The place was already cleaned.</string>
    <string name="start_work">Checked in successfully ;-)</string>
    <string name="not_on_location">You are not in working place.</string>
    <string name="reset_the_password">Please enter your email. We will send you instructions how to reset a password.</string>
    <string name="employees">Employees</string>
    <string name="places">Cleaning Places</string>




    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="version">© 2018 Alex-design.dk for Android Version 1.0.0 EN</string>
    <string name="error_Toast">Something went wrong</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="subject_email">Your new account, Cleaning App</string>
    <string name="message_email">The new account has been created. Please Login with your email and this password: </string>
    <string name="message_2_email">  Best Regards, manager team :-) </string>
    <string name="code">code</string>
    <string name="submit">Submit</string>
    <string name="e_g_toilet">Where, e.g. Toilet</string>
    <string name="message">message</string>
    <string name="reports">Reports</string>
    <string name="ratingRequired">Rating required</string>
    <string name="reviews">My reviews</string>
    <string name="SnackBar_connected">Good! Connected to Internet</string>
    <string name="SnackBar_disconnected">"No internet connection"</string>


</resources>
