<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    android:id="@+id/myCoordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:gravity="center_horizontal"
                      android:orientation="vertical"
                      android:paddingBottom="@dimen/activity_vertical_margin"
                      android:paddingLeft="@dimen/activity_horizontal_margin"
                      android:paddingRight="@dimen/activity_horizontal_margin"
                      android:paddingTop="@dimen/activity_vertical_margin"
                      android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.9"
                android:gravity="center"
                android:fontFamily="@string/action_settings"
                android:layout_marginBottom="20dp"
                android:weightSum="1"
                android:layout_weight="0.01">

                <EditText
                    android:id="@+id/editText"
                    android:hint="@string/product_name"
                    android:background="@drawable/edittext_signup"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColor="@color/textButtonColor"
                    android:layout_weight="0.94"
                    android:paddingLeft="10dp"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.9"
                android:gravity="center"
                android:fontFamily="@string/action_settings"
                android:layout_marginBottom="20dp"
                android:weightSum="1">

                <EditText
                    android:id="@+id/EAN"
                    android:hint="@string/ean"
                    android:background="@drawable/edittext_signup"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColor="@color/textButtonColor"
                    android:layout_weight="0.94"
                    android:paddingLeft="10dp"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/scan"
                android:text="Scan Barcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/darkGray"
                android:textColor="@color/colorAccent"
                android:layout_centerHorizontal="true"

                android:onClick="scanBarcode_On_Click_Button"
                />


            <Button
                android:id="@+id/add"
                android:text="@string/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/saveButtonColor"
                android:textColor="@color/textButtonColor"
                android:layout_marginTop="7dp"

                android:onClick="add_On_Click_Button"
                />


        </LinearLayout>


</android.support.design.widget.CoordinatorLayout>

