<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:weightSum="1">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.9"
                android:gravity="center"
                android:fontFamily="@string/action_settings"
                android:layout_marginBottom="20dp"
                android:weightSum="1">

                <EditText
                    android:id="@+id/editTextEmail"
                    android:hint="@string/email"
                    android:background="@drawable/edittext_signup"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColor="@color/textButtonColor"
                    android:layout_weight="0.94"
                    android:paddingLeft="10dp"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.9"
                android:gravity="center"
                android:fontFamily="@string/action_settings"
                android:layout_marginBottom="20dp"
                android:weightSum="1">

                <EditText
                    android:id="@+id/editMobileNumber"
                    android:hint="@string/mobile_number"
                    android:background="@drawable/edittext_signup"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColor="@color/textButtonColor"
                    android:layout_weight="0.94"
                    android:paddingLeft="10dp"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.9"
                android:gravity="center"
                android:fontFamily="@string/action_settings"
                android:layout_marginBottom="20dp"
                android:weightSum="1"
                android:layout_weight="0.01">

                <EditText
                    android:id="@+id/editTextUserName"
                    android:hint="@string/name_surname"
                    android:background="@drawable/edittext_signup"
                    android:inputType="textAutoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColor="@color/textButtonColor"
                    android:layout_weight="0.94"
                    android:paddingLeft="10dp"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.9"
                android:gravity="center"
                android:fontFamily="@string/action_settings"
                android:layout_marginBottom="20dp"
                android:weightSum="1">

                <EditText
                    android:id="@+id/editTextPassword"
                    android:hint="@string/password"
                    android:background="@drawable/edittext_signup"
                    android:inputType="textVisiblePassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColor="@color/textButtonColor"
                    android:layout_weight="0.94"
                    android:paddingLeft="10dp"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/buttonCreateAccount"
                android:text="Create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/saveButtonColor"
                android:textColor="@color/textButtonColor"
                />

</LinearLayout>
