<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    android:id="@+id/myCoordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cleaning_main_2">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

                          android:id="@+id/LinearLayout"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"

                          android:paddingBottom="@dimen/activity_vertical_margin_Login_Padding"
                          android:paddingLeft="@dimen/activity_horizontal_margin_Login_Padding"
                          android:paddingRight="@dimen/activity_horizontal_margin_Login_Padding"
                          android:paddingTop="@dimen/activity_vertical_margin_Login_Padding"
                          android:orientation="vertical"
                          android:gravity="center_vertical|center_horizontal">


                                    <android.support.design.widget.TextInputLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:alpha="0.85"
                                        android:background="@drawable/row_user_name"
                                        android:gravity="center"
                                        android:layout_marginTop="210dp">

                                        <EditText
                                            android:id="@+id/editTextEmailToLogin"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:hint="@string/email"
                                            android:inputType="textEmailAddress"
                                            android:maxLines="1"
                                            android:singleLine="true"
                                            android:textSize="18sp"
                                            android:layout_marginRight="10dp"
                                            android:layout_marginLeft="30dp" />

                                    </android.support.design.widget.TextInputLayout>

                                    <android.support.design.widget.TextInputLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:alpha="0.85"
                                        android:background="@drawable/row_password"
                                        android:gravity="center">

                                        <EditText
                                            android:id="@+id/editTextPasswordToLogin"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:hint="@string/password"
                                            android:inputType="textPassword"
                                            android:maxLines="1"
                                            android:singleLine="true"
                                            android:layout_marginRight="10dp"
                                            android:layout_marginLeft="30dp"
                                            android:textSize="18sp" />

                                    </android.support.design.widget.TextInputLayout>

                                    <Button
                                        android:id="@+id/login"
                                        style="@style/buttonSize"
                                        android:text="@string/login"
                                        android:gravity="center"
                                        android:layout_above="@+id/register"
                                        android:layout_centerHorizontal="true"
                                        android:layout_marginTop="24dp"
                                        android:background="@drawable/button_login"
                                        android:textColor="@android:color/white"
                                        android:clickable="true"
                                        android:onClick="onClick_button_Login"/>

                                    <Button
                                        android:id="@+id/register"
                                        style="@style/buttonSize"
                                        android:text="@string/register"
                                        android:gravity="center"
                                        android:layout_above="@+id/forgotPasswordText"
                                        android:layout_centerHorizontal="true"
                                        android:layout_marginTop="10dp"
                                        android:background="@drawable/button_register"
                                        android:textColor="@android:color/white"
                                        android:clickable="true"
                                        android:onClick="onClick_button_Register"/>

                                    <TextView
                                        android:id="@+id/forgotPasswordText"
                                        android:layout_width="wrap_content"
                                        android:layout_height="match_parent"
                                        android:layout_gravity="center_horizontal"
                                        android:text="@string/forgot"
                                        android:layout_marginTop="7dp"
                                        android:textColor="@android:color/white"
                                        android:textSize="10dp"
                                        android:onClick="onClick_button_ForgotPassword"/>

            </LinearLayout>

</android.support.design.widget.CoordinatorLayout>

