<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/linearLayout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:weightSum="1">



    <ImageView

        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:src="@drawable/camera_add"

        android:layout_gravity="center"
        android:layout_marginBottom="10dp"

        android:onClick="On_Click_Image_View"/>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.9"
        android:gravity="center"
        android:fontFamily="@string/action_settings"
        android:layout_marginBottom="10dp"
        android:weightSum="1">

        <EditText
            android:id="@+id/editArea"
            android:hint="@string/e_g_toilet"
            android:background="@drawable/edittext_signup"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/textButtonColor"
            android:layout_weight="0.94"
            android:paddingLeft="10dp"
            android:maxLines="1"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.9"
        android:gravity="center"
        android:fontFamily="@string/action_settings"
        android:layout_marginBottom="20dp"
        android:weightSum="1">

        <EditText
            android:id="@+id/editMessage"
            android:hint="@string/message"
            android:background="@drawable/edittext_signup"
            android:inputType="textAutoCorrect"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/textButtonColor"
            android:layout_weight="0.94"
            android:paddingLeft="10dp"/>

    </android.support.design.widget.TextInputLayout>


    <RatingBar
        android:id="@+id/ratingBarAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:numStars="7"
        android:stepSize="0.1"
        android:theme="@style/RatingBar"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabSend"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:src="@drawable/send_button"
        android:onClick="on_click_button_Send"
        />


</LinearLayout>